<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPet">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="269dp"
        android:layout_height="119dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:background="@color/app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_horizontal"
            android:text="@string/select_your_pet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/dog"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/cat"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
